--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@ body.dark-mode {
     width: 350px;
     min-width: 350px;
     background-color: var(--bg-secondary-color);
-    padding-inline: 30px;
+    padding-inline: 20px;
     height: 100vh;
     overflow: hidden auto;
 
@@ -52,6 +52,7 @@ body.dark-mode {
           display: flex;
           align-items: center;
           input {
+            flex: 1;
             border: none;
             border-radius: 4px;
             padding: 10px;
@@ -127,5 +128,69 @@ body.dark-mode {
         background-color: var(--btn-bg-primary-color);
       }
     }
+  }
+}
+
+.sidebarContainer {
+  width: 350px;
+  min-width: 350px;
+  height: 100vh;
+  background-color: var(--bg-secondary-color);
+  padding-inline: 20px;
+  overflow-y: auto;
+}
+
+@media (max-width: 900px) {
+  .hornetContainer {
+    .walletGraphContainer {
+      width: 100%;
+    }
+  }
+  .sidebarContainer {
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 350px;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
+  }
+
+  .sidebarContainer.open {
+    left: 0;
+    z-index: 1;
+  }
+
+  .sidebarToggleBtn {
+    display: block;
+    position: fixed;
+    top: 15px;
+    left: 15px;
+    z-index: 100;
+    background: var(--btn-bg-primary-color);
+    color: var(--btn-text-primary-color);
+    border: none;
+    padding: 10px 15px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 18px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  }
+
+  .closeSidebarBtn {
+    display: block;
+    background: none;
+    border: none;
+    color: var(--text-primary-color);
+    font-size: 20px;
+    cursor: pointer;
+    position: absolute;
+    top: 15px;
+    right: 15px;
+  }
+}
+
+@media (min-width: 901px) {
+  .sidebarToggleBtn,
+  .closeSidebarBtn {
+    display: none;
   }
 }
